# CrackFM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: proposal.md
notebooks/: crackfm_kaggle.ipynb
scripts/: download_data.sh
src/crackfm/: __init__.py  config.py  engine.py  eval.py  losses.py  metrics.py  train.py  utils.py
src/crackfm/models/: __init__.py  build.py  lora.py  sam2_wrapper.py  unet.py
src/crackfm/prompting/: __init__.py  geometry_adaptive.py
src/crackfm/severity/: __init__.py  width.py
tests/: test_metrics.py  test_prompting.py  test_severity.py
