[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crackfm"
version = "0.1.0"
description = "Promptable foundation-model crack segmentation with geometry-adaptive prompting and severity quantification"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anushka Singhania" }]
keywords = ["crack-segmentation", "foundation-model", "SAM2", "severity", "infrastructure"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "opencv-python-headless>=4.8",
    "pillow>=9.5",
    "omegaconf>=2.3",
    "tqdm>=4.65",
]

[project.optional-dependencies]
torch = [
    "torch>=2.1",
    "torchvision>=0.16",
    "albumentations>=1.3",
]
sam2 = [
    "torch>=2.1",
    "torchvision>=0.16",
    # Install SAM 2 from source: https://github.com/facebookresearch/sam2
    # pip install "git+https://github.com/facebookresearch/sam2.git"
]
track = ["wandb>=0.16"]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[project.scripts]
crackfm-train = "crackfm.train:main"
crackfm-eval = "crackfm.eval:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
